# super-markup-formats

./: .gitignore  Cargo.toml  README.md
super-html-ast/: Cargo.toml
super-html-ast/src/: ast.rs  attrs.rs  constants.rs  debug.rs  format.rs  lib.rs  markdown.rs  parser.rs  query.rs  tag.rs  text_format.rs
super-html-ast/src/format/: pretty_html.rs
super-html-ast/src/visitors/: mod.rs  reduce.rs  rewrite.rs
super-markdown-ast/: Cargo.toml
super-markdown-ast/src/: ast.rs  format.rs  lib.rs  normalize.rs
