[package]
name = "super-html-ast"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.9.0"
once_cell = "1.19"
scraper = "0.23.1"
ego-tree = "=0.10.0"
html-escape = "0.2.13"

super-markdown-ast = { path = "../super-markdown-ast" }

[dependencies.pretty-tree]
git = "https://github.com/colbyn/pretty-tree-rs.git"
rev = "ccad177"
